--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-input#checkbox {
-    transform: scale(2);
 }
